--- a/data/1.html
+++ b/data/1.html
@@ -23,12 +23,12 @@
 
         <div class="introduction">
                 <ul class="detaillist">
-                  <li><b>Supervisor:</b> David S. Touretzky</li>
+                  <li><b>Supervisor:</b> <a class="nostyle" href="https://www.cs.cmu.edu/~dst/" target="_blank">David S. Touretzky</a> </li>
                   <li><b>Role:</b> Research Intern</li>
                   <li><b>Location:</b> Carnegie Mellon University</li>
                   <li><b>Duration:</b> 6 months</li>
                   <li><b>Tools:</b> Python, OpenCV, ROS, CozmoFSM, Cozmotools</li>
-                  <li><b>Keywords:</b> Computer Vision, SLAM, Perception, Geometry, Robotics</li>
+                  <li><b>Keywords:</b> Computer Vision, <a class="nostyle" href="https://en.wikipedia.org/wiki/Simultaneous_localization_and_mapping" target="_blank">SLAM</a>, Perception, Geometry, Robotics</li>
                 </ul>
             <br/>
             <p>
@@ -41,7 +41,7 @@
             </p>
             <p>
                 The shared map allows the robots to interact with each other and share their eyes.
-                The video above shows a small application of the dynamic map built by Cozmo.
+                The video above shows a small application of the dynamic map built by <a class="nostyle" href="https://www.anki.com/en-us/cozmo" target="_blank">Cozmo</a>.
                 With no prior information about the walls, Cozmo is able to <b>SEE</b> them and cruise through to the target.
             </p>
         </div>
@@ -52,7 +52,7 @@
           <tr>
             <th><img class="left" src="images/1/as1.png"></th>
             <th class="righttext"> 
-                Using geometry based computer vision, the positions of Aruco markers were calculated from monocular cameras.
+                Using geometry based computer vision, the positions of <a class="nostyle" href="https://docs.opencv.org/3.1.0/d5/dae/tutorial_aruco_detection.html" target="_blank">Aruco</a> markers were calculated from monocular cameras.
                 <br style="clear: both;" />
             </th> 
           </tr>
@@ -63,7 +63,7 @@
         <table>
           <tr>
             <th class="lefttext">
-                Aruco markers were attached to the robots for pose estimation.
+                <a class="nostyle" href="https://docs.opencv.org/3.1.0/d5/dae/tutorial_aruco_detection.html" target="_blank">Aruco</a> markers were attached to the robots for pose estimation.
                 <br style="clear: both;" />
             </th>
             <th><img class="right" src="images/1/axis.png"></th>
@@ -90,7 +90,7 @@
         <table>
           <tr>
             <th class="lefttext">
-                Odometry readings and camera information were fused using a Rao-Backwellized particle filter for extremely accurate estimates.
+                Odometry readings and camera information were fused using a <a class="nostyle" href="https://people.eecs.berkeley.edu/~pabbeel/cs287-fa12/slides/RBPF.pdf" target="_blank">Rao-Backwellized</a> particle filter for extremely accurate estimates.
                 <br/>
                 <br/>
                 This SLAM algorithm increases accuracy the longer the system runs.
