--- a/data/3.html
+++ b/data/3.html
@@ -31,19 +31,25 @@
                 </ul>
             <br/>
             <p>
-                In this project, a shared map was built for a multi-robot system.  This client-server system automatically calculates transformation between different coordinate frames.  Building the map includes:
-                <ul class="inlist">
-                  <li>Localizing the robot in 3D from a perched camera</li>
-                  <li>Particle filter for SLAM and to fuse information</li>
-                  <li>Shared map is built by the server and sent to all the clients</li>
-                </ul>  
-            </p>
-            <p>
-                The shared map allows the robots to interact with each other and share their eyes.
-                The video above shows a small application of the dynamic map built by Cozmo.
-                With no prior information about the walls, Cozmo is able to <b>SEE</b> them and cruise through to the target.
+                The aerodynamics club or AERO D as we like to call it, is a technical club at BITS Goa. It’s a place where all kind of people from different backgrounds come together to make something out of nothing. To be specific, something that has the ability to fly. Be it as simple as a replica of a WWII plane or as advanced as a <a class="nostyle" href="https://en.wikipedia.org/wiki/VTOL" target="_blank">VTOL</a>, we have it all. As a member, I built quadcopters, tricopters, CNC 4axis foam Cutters, and 3D-Printers for fun. In my senior year, I was elected as the coordinator of the club and went on to lead numerous projects.
+
+                <br/>
+                <br/>
+                The video above is our orientation video for our freshers. Some of our projects are described below:
             </p>
         </div>
+    </div>
+
+    <div class="projecttiles invisiblepage">
+        <table>
+          <tr>
+            <th><img class="left" src="images/3/wing.png"></th>
+            <th class="righttext"> 
+                Flying wing, just a flyable wing with no main body except for the wing and a propellers and a motor providing thrust.
+                <br style="clear: both;" />
+            </th> 
+          </tr>
+        </table>
     </div>
 
     <div class="projecttiles invisiblepage">
@@ -56,7 +62,7 @@
                 Designed by our members and printed using our in-house 3D printer.
                 <br style="clear: both;" />
             </th>
-            <th><img class="right" src="images/3/nano.jpeg"></th>
+            <th><img class="right" src="images/3/hydra.png"></th>
           </tr>
         </table>
     </div>
@@ -64,14 +70,14 @@
     <div class="projecttiles invisiblepage">
         <table>
           <tr>
-            <th><img class="left" src="images/3/cicada.jpg"></th>
-            <th class="righttext"> 
-                Cicada, a Y-Hexacopter built to lift heavy cameras for mesmerizing aerial shots.
+            <th class="lefttext">
+                Ornithopter the flying mechanical bird.
                 <br/>
                 <br/>
-                Like all our crafts, this was built from scratch, including the wooden frame.
+                Designed by one of our best, the bird is a mechanical marvel. 
                 <br style="clear: both;" />
-            </th> 
+            </th>
+            <th><img class="right" src="images/3/orn.png"></th>
           </tr>
         </table>
     </div>
