--- a/data/7.html
+++ b/data/7.html
@@ -1,9 +1,25 @@
 <link rel="stylesheet" type="text/css" href="css/7.css">
 
+    <div class="projecttitle">
+        <h2>
+            Dynamic Website
+        </h2>
 
-	<div class="projecttilescontainer">
-		<iframe class="interactive" src="data/interactiveplaceholder.html"> </iframe>
-	</div>
+    </div>
+
+    <div class="projecttilescontainer">
+        <iframe id="interactive" src="data/interactiveplaceholder.html"> </iframe>
+        <div class="introduction">
+                <ul class="detaillist">
+                  <li><b>Duration:</b> 1 week</li>
+                  <li><b>Tools:</b> HTML5, CSS, Javascript, Jquery, D3</li>
+                </ul>
+            <br/>
+            <p>
+                Technically, this website is one of my projects too. 
+            </p>
+        </div>
+    </div>
 
 
 <script  src="js/7.js" ></script>
