--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 			<div  id="contact" class="inactivepage">
 				<div class="whitetiles"> 
 					<center>
-						<p style="text-align:center;">You can reach me at <a href="mailto:f20130112@goa.bits-pilani.ac.in">f20130112@goa.bits-pilani.ac.in</a></p>
+						<p style="text-align:center;">You can reach me at <a href="mailto:georgejo@andrew.cmu.edu">georgejo@andrew.cmu.edu</a></p>
 						<p style="text-align:center;">+91 9503519766 | INDIA</p>
 					</center>
 				</div>
@@ -94,8 +94,8 @@
 		<script>
 			var text = "";
 			var i;
-			var abstract = ["Shared World Map", "eLISA Simulation", "AeroD", "Molecular Dynamics", "Ion Trap", "Computer Tomography", "Website (meta)"];
-			for (i = 1; i < 8; i++) {
+			var abstract = ["Shared World Map", "eLISA Simulation", "AeroD", "Molecular Dynamics", "Ion Trap", "Computer Tomography"];
+			for (i = 1; i < 7; i++) {
 			    text += "<div id=\"tile"+i+"\" class=\"tiles\" data-projectid="+i+"> <img id=\"tileimg\" src=\"images/"+i+"/main.jpg\" alt=\"tile\"/> <div class=\"middle\"> <div class=\"text\">"+abstract[i-1]+"</div> </div> </div>"
 			}
 
