--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 				<div class="whitetiles"> 
 						<img src="images/fez.jpg" style="float:right;">
 						<p>
-						I'm an aspiring computer vision researcher, an avid reader, and a gamer. Additionally, I'm passionate about robotics, machine learning, and physics. I'm currently a senior pursuing Computer Science and Physics at BITS Pilani, India. Concurrently, I'm a part of Microsoft's Big Data Team in Bangalore, India and will be joining Carnegie Mellon University's Masters in Computer Vision program this Fall.
+						I'm an aspiring computer vision researcher, an avid reader, and a gamer. Additionally, I'm passionate about robotics, machine learning, and physics. I recently graduated with B.E. Computer Science and M.Sc. Physics from BITS Pilani, India and am currently pursuing my Master's in Computer Vision at Carnegie Mellon University, Pittsburgh. Concurrently, I'm a part of Microsoft's Big Data Team in Bangalore
 						<br/>
 						<br/>
 						I'm paranoid about anonymity and hence use the picture on the right (FEZ) on all platforms. 
