--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				</a></li>
 				<li class="options" data-optionsid="#about"><a href="#" class= "inactive">about</a></li>
 				<li class="options" data-optionsid="#contact"><a href="#" class= "inactive">contact</a></li>
-				<li class="options" data-optionsid="#CV"><a href="#" class= "inactive">CV</a></li>
+				<li class="options" data-optionsid="#CV"><a href="#" class= "inactive">résumé</a></li>
 			</ul>
 		</div>
 		
@@ -52,8 +52,8 @@
 			<div  id="contact" class="inactivepage">
 				<div class="whitetiles"> 
 					<center>
-						<p style="text-align:center;">You can reach me at <a href="mailto:georgejo@andrew.cmu.edu">georgejo@andrew.cmu.edu</a></p>
-						<p style="text-align:center;">+91 9503519766 | INDIA</p>
+						<p style="text-align:center;">You can reach me at <a href="mailto:georgejo@cs.cmu.edu">georgejo@cs.cmu.edu</a></p>
+						<p style="text-align:center;">+1 940-279-0745 | US</p>
 					</center>
 				</div>
 			</div>
@@ -62,7 +62,7 @@
 				<div class="whitetiles"> 
 						<img src="images/fez.jpg" style="float:right;">
 						<p>
-						I'm an aspiring computer vision researcher, an avid reader, and a gamer. Additionally, I'm passionate about robotics, machine learning, and physics. I recently graduated with B.E. Computer Science and M.Sc. Physics from BITS Pilani, India and am currently pursuing my Master's in Computer Vision at Carnegie Mellon University, Pittsburgh. Concurrently, I'm a part of Microsoft's Big Data Team in Bangalore
+						I'm an aspiring computer vision researcher, an avid reader, and a gamer. Additionally, I'm passionate about robotics, machine learning, and physics. I'm currently pursuing my Master's in Computer Vision at Carnegie Mellon University, Pittsburgh. Concurrently, I'm working on Active Vision with Dr Katerina Fragkiadaki.
 						<br/>
 						<br/>
 						I'm paranoid about anonymity and hence use the picture on the right (FEZ) on all platforms. 
